fix: new method for levelup
